implemented getWinner //passed all tests